--- a/app/src/main/res/layout/edit_schedule_layout.xml
+++ b/app/src/main/res/layout/edit_schedule_layout.xml
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/allExercises"
+        android:id="@+id/setsRecyclerView"
         android:layout_width="350dp"
         android:layout_height="422dp"
         android:layout_marginTop="80dp"
