--- a/app/src/main/res/layout/popup_exercise2.xml
+++ b/app/src/main/res/layout/popup_exercise2.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent" >
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/allExercises"
+        android:id="@+id/setsRecyclerView"
         android:layout_width="353dp"
         android:layout_height="469dp"
         android:layout_marginTop="32dp"
