--- a/app/src/main/res/layout/workout_layout.xml
+++ b/app/src/main/res/layout/workout_layout.xml
@@ -147,7 +147,7 @@
         app:layout_constraintTop_toBottomOf="@+id/reps" />
 
     <TextView
-        android:id="@+id/sets"
+        android:id="@+id/index"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
