Fixato la EditScheduleActivity

--- a/app/src/main/res/layout/set_exercise_data_layout.xml
+++ b/app/src/main/res/layout/set_exercise_data_layout.xml
@@ -37,7 +37,7 @@
         android:id="@+id/rest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/seguisb"
         android:text="Rest:"
         android:textSize="18sp"
@@ -50,7 +50,7 @@
         android:id="@+id/seekBar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:max="60"
         android:progress="12"
         app:layout_constraintEnd_toEndOf="parent"
@@ -102,7 +102,7 @@
         android:fontFamily="@font/seguisb"
         android:text='Click "add set" start the configuration'
         android:textSize="16sp"
-        android:textStyle="italic"
+        android:textStyle="normal"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
