--- a/app/src/main/res/layout/edit_exercise_item.xml
+++ b/app/src/main/res/layout/edit_exercise_item.xml
@@ -44,7 +44,7 @@
 
         <TextView
             android:id="@+id/reps"
-            android:layout_width="56dp"
+            android:layout_width="72dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
@@ -57,7 +57,7 @@
 
         <TextView
             android:id="@+id/index"
-            android:layout_width="56dp"
+            android:layout_width="72dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
@@ -72,8 +72,8 @@
             android:id="@+id/weight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="42dp"
-            android:layout_marginLeft="42dp"
+            android:layout_marginStart="56dp"
+            android:layout_marginLeft="56dp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/seguisb"
             android:text="Weight"
@@ -85,10 +85,11 @@
             android:id="@+id/rest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="42dp"
-            android:layout_marginLeft="42dp"
+            android:layout_marginStart="56dp"
+            android:layout_marginLeft="56dp"
             android:layout_marginTop="4dp"
             android:fontFamily="@font/seguisb"
+            android:gravity="center_vertical"
             android:text="Rest"
             android:textSize="14sp"
             app:layout_constraintStart_toEndOf="@+id/index"
