--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -93,6 +93,15 @@
             android:textSize="18sp"
             android:visibility="gone" />
 
+        <ImageView
+            android:id="@+id/errorImageView"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginTop="100dp"
+            android:foregroundGravity="center"
+            android:src="@mipmap/dumbbell_internet_error"
+            android:visibility="gone" />
+
         <GridView
             android:id="@+id/grid"
             android:layout_width="wrap_content"
