--- a/app/src/main/res/layout/add_exercise_item.xml
+++ b/app/src/main/res/layout/add_exercise_item.xml
@@ -13,7 +13,7 @@
         android:padding="8dp" >
 
         <TextView
-            android:id="@+id/exerciseTitle"
+            android:id="@+id/activityTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
