--- a/app/src/main/res/layout/add_schedule.xml
+++ b/app/src/main/res/layout/add_schedule.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/layout_bg"
-    tools:context=".activities.schedules.CreateScheduleActivity"
+    tools:context=".activities.schedules.CreateScheduleActivityOld"
     >
 
 
