--- a/app/src/main/res/layout/edit_exercise_item.xml
+++ b/app/src/main/res/layout/edit_exercise_item.xml
@@ -13,7 +13,7 @@
         android:padding="8dp" >
 
         <TextView
-            android:id="@+id/exerciseTitle"
+            android:id="@+id/activityTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -53,7 +53,7 @@
             android:text="Reps"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/exerciseTitle" />
+            app:layout_constraintTop_toBottomOf="@+id/activityTitle" />
 
         <TextView
             android:id="@+id/index"
@@ -79,7 +79,7 @@
             android:text="Weight"
             android:textSize="14sp"
             app:layout_constraintStart_toEndOf="@+id/reps"
-            app:layout_constraintTop_toBottomOf="@+id/exerciseTitle" />
+            app:layout_constraintTop_toBottomOf="@+id/activityTitle" />
 
         <TextView
             android:id="@+id/rest"
