--- a/app/src/main/res/layout/popup_exercise2.xml
+++ b/app/src/main/res/layout/popup_exercise2.xml
@@ -22,7 +22,7 @@
     </androidx.recyclerview.widget.RecyclerView>
 
     <TextView
-        android:id="@+id/exerciseTitle"
+        android:id="@+id/activityTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -64,5 +64,5 @@
         android:hint="Search..."
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/exerciseTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/activityTitle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
