--- a/app/src/main/res/layout/premium_fragment.xml
+++ b/app/src/main/res/layout/premium_fragment.xml
@@ -7,7 +7,7 @@
     tools:context=".activities.mainactivity.premium.PremiumFragment">
 
     <TextView
-        android:id="@+id/exerciseTitle"
+        android:id="@+id/activityTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
@@ -33,7 +33,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.054"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/exerciseTitle"
+        app:layout_constraintTop_toBottomOf="@+id/activityTitle"
         app:layout_constraintVertical_bias="0.533" />
 
     <GridView
