--- a/app/src/main/res/layout/register_layout.xml
+++ b/app/src/main/res/layout/register_layout.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/layout_bg">
 
     <TextView
-        android:id="@+id/exerciseTitle"
+        android:id="@+id/activityTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
