--- a/app/src/main/res/layout/view_schedule_layout.xml
+++ b/app/src/main/res/layout/view_schedule_layout.xml
@@ -8,7 +8,7 @@
     tools:context=".activities.mainactivity.home.ViewSchedule">
 
     <TextView
-        android:id="@+id/exerciseTitle"
+        android:id="@+id/activityTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
@@ -47,7 +47,7 @@
         android:clipToPadding="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/exerciseTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/activityTitle" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/play"
