--- a/app/src/main/res/layout/premium_fragment.xml
+++ b/app/src/main/res/layout/premium_fragment.xml
@@ -38,7 +38,7 @@
 
     <GridView
         android:id="@+id/gridFilter"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="490dp"
         android:clipToPadding="false"
@@ -49,6 +49,7 @@
         android:padding="0dp"
         android:paddingBottom="150dp"
         android:verticalSpacing="4dp"
+        android:clickable="true"
         android:layout_marginTop="120dp"
         app:layout_constraintBottom_toTopOf="@+id/view_pager"
         app:layout_constraintEnd_toEndOf="parent"
