--- a/app/src/main/res/layout/set_schedule_data_layout.xml
+++ b/app/src/main/res/layout/set_schedule_data_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.mainactivity.home.ViewSchedule"
+    tools:context=".activities.mainactivity.home.ViewScheduleActivity"
     android:background="@drawable/background">
 
     <TextView
