--- a/app/src/main/res/layout/exercise_item.xml
+++ b/app/src/main/res/layout/exercise_item.xml
@@ -43,8 +43,8 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/reps"
-            android:layout_width="80dp"
+            android:id="@+id/repsTextView"
+            android:layout_width="92dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
@@ -57,7 +57,7 @@
 
         <TextView
             android:id="@+id/index"
-            android:layout_width="80dp"
+            android:layout_width="92dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
@@ -66,10 +66,10 @@
             android:text="Sets"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/reps" />
+            app:layout_constraintTop_toBottomOf="@+id/repsTextView" />
 
         <TextView
-            android:id="@+id/weight"
+            android:id="@+id/weightTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="56dp"
@@ -78,7 +78,7 @@
             android:fontFamily="@font/seguisb"
             android:text="Weight"
             android:textSize="14sp"
-            app:layout_constraintStart_toEndOf="@+id/reps"
+            app:layout_constraintStart_toEndOf="@+id/repsTextView"
             app:layout_constraintTop_toBottomOf="@+id/activityTitle" />
 
         <TextView
@@ -93,7 +93,7 @@
             android:text="Rest"
             android:textSize="14sp"
             app:layout_constraintStart_toEndOf="@+id/index"
-            app:layout_constraintTop_toBottomOf="@+id/weight" />
+            app:layout_constraintTop_toBottomOf="@+id/weightTextView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
