--- a/app/src/main/res/layout/popup_exercise.xml
+++ b/app/src/main/res/layout/popup_exercise.xml
@@ -22,7 +22,7 @@
         app:maxImageSize="20dp" />
 
     <TextView
-        android:id="@+id/reps"
+        android:id="@+id/repsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -45,7 +45,7 @@
         app:fabCustomSize="36dp"
         app:layout_constraintEnd_toStartOf="@+id/set_sub"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/reps"
+        app:layout_constraintTop_toBottomOf="@+id/repsTextView"
         app:maxImageSize="20dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -87,7 +87,7 @@
         android:text="Sets: XX"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/reps"
+        app:layout_constraintStart_toEndOf="@+id/repsTextView"
         app:layout_constraintTop_toBottomOf="@+id/set_add" />
 
     <View
@@ -121,7 +121,7 @@
         app:maxImageSize="20dp" />
 
     <TextView
-        android:id="@+id/weight"
+        android:id="@+id/weightTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
