--- a/app/src/main/res/layout/user_schedule_layout.xml
+++ b/app/src/main/res/layout/user_schedule_layout.xml
@@ -4,30 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="170dp"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_marginLeft="14dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginRight="14dp"
+        android:layout_marginBottom="10dp"
         android:textAlignment="center"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="20dp"
         app:cardElevation="6dp"
-        app:contentPadding="14dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="14dp"
-        android:layout_marginLeft="14dp"
 
-        android:layout_gravity="center" >
+        app:contentPadding="14dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
 
 
             <TextView
@@ -60,9 +59,7 @@
                 android:id="@+id/created_by"
                 android:layout_width="206dp"
                 android:layout_height="23dp"
-                android:layout_marginStart="140dp"
-                android:layout_marginLeft="140dp"
-                android:layout_marginTop="28dp"
+                android:layout_marginTop="24dp"
                 android:ellipsize="end"
                 android:fontFamily="@font/seguisb"
                 android:maxLines="3"
@@ -70,16 +67,14 @@
                 android:textSize="14sp"
                 android:textStyle="italic"
                 app:layout_constraintBottom_toTopOf="@+id/downloads"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/workoutTitle" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/workoutDescription" />
 
             <TextView
                 android:id="@+id/downloads"
                 android:layout_width="206dp"
                 android:layout_height="23dp"
-                android:layout_marginStart="140dp"
-                android:layout_marginLeft="140dp"
-                android:layout_marginTop="52dp"
+                android:layout_marginTop="2dp"
                 android:ellipsize="end"
                 android:fontFamily="@font/seguisb"
                 android:maxLines="3"
@@ -87,12 +82,13 @@
                 android:textSize="14sp"
                 android:textStyle="italic"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/workoutTitle" />
+                app:layout_constraintEnd_toEndOf="@+id/equipment"
+                app:layout_constraintTop_toBottomOf="@+id/equipment"
+                app:layout_constraintVertical_bias="1.0" />
 
             <TextView
                 android:id="@+id/equipment"
-                android:layout_width="22dp"
+                android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:background="@drawable/dumbell"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -103,7 +99,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:layout_marginBottom="4dp"
+                android:layout_marginBottom="2dp"
                 android:ellipsize="end"
                 android:fontFamily="@font/seguisb"
                 android:maxLines="1"
