--- a/app/src/main/res/layout/view_schedule_layout.xml
+++ b/app/src/main/res/layout/view_schedule_layout.xml
@@ -100,13 +100,13 @@
         android:id="@+id/creator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="italic"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/seguisb"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Created by: mts"
+        android:textColor="@color/white"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.886"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.193" />
+        app:layout_constraintTop_toBottomOf="@+id/activityTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
