--- a/app/src/main/res/layout/fragment_suggested.xml
+++ b/app/src/main/res/layout/fragment_suggested.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.mainactivity.premium.SuggestedFragment">
+    tools:context=".activities.mainactivity.explore.SuggestedFragment">
 
 
     <androidx.recyclerview.widget.RecyclerView
