Some code refactoring
User page and search schedule

--- a/app/src/main/res/layout/download_schedule_layout.xml
+++ b/app/src/main/res/layout/download_schedule_layout.xml
@@ -8,6 +8,21 @@
     tools:context=".activities.mainactivity.home.ViewScheduleActivity">
 
     <TextView
+        android:id="@+id/errorTextViewDownload"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/seguisb"
+        android:gravity="center"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp"
+        android:text="TextView"
+        android:textColor="@color/red_error"
+        android:textSize="18sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
         android:id="@+id/activityTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
