--- a/app/src/main/res/layout/user_page_layout.xml
+++ b/app/src/main/res/layout/user_page_layout.xml
@@ -11,8 +11,8 @@
 
     <TextView
         android:id="@+id/errorTextView2"
-        android:layout_width="45dp"
-        android:layout_height="66dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
         android:fontFamily="@font/seguisb"
         android:gravity="center"
