--- a/app/src/main/res/layout/complete_schedule_layout.xml
+++ b/app/src/main/res/layout/complete_schedule_layout.xml
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/seguisb"
-        android:text="Complete the schedule"
+        android:text="@string/complete_the_schedule"
         android:textSize="26dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/seguisb"
-        android:text="Insert title"
+        android:text="@string/insert_title"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/seguisb"
-        android:text="Insert description"
+        android:text="@string/insert_description"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,7 +73,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         style="@style/editStyle"
-        android:text="Title"
+        android:text="@string/title"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.144"
@@ -88,7 +88,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Description"
+        android:text="@string/description"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.144"
@@ -102,7 +102,7 @@
         android:layout_height="46dp"
         android:background="@drawable/custom_login_button"
         android:fontFamily="@font/seguisb"
-        android:text="Save"
+        android:text="@string/save"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         app:backgroundTint="@color/white"
