--- a/app/src/main/res/layout/download_schedule_layout.xml
+++ b/app/src/main/res/layout/download_schedule_layout.xml
@@ -31,7 +31,7 @@
         android:fontFamily="@font/seguisb"
         android:gravity="center"
         android:maxLines="1"
-        android:text="Schedule title"
+        android:text="@string/schedule_title"
         android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -69,7 +69,7 @@
         android:layout_marginTop="32dp"
         android:background="@drawable/custom_login_button"
         android:fontFamily="@font/seguisb"
-        android:text="Download Schedule"
+        android:text="@string/download_schedule"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         app:backgroundTint="@color/white"
