--- a/app/src/main/res/layout/intro_layout.xml
+++ b/app/src/main/res/layout/intro_layout.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/seguisb"
-        android:text="Some tips!"
+        android:text="@string/some_tips"
         android:textSize="26dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +51,7 @@
         android:layout_marginBottom="16dp"
         android:fontFamily="@font/seguisb"
         android:gravity="center_vertical"
-        android:text="GO TO APP"
+        android:text="@string/go_to_app"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
