--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -73,7 +73,7 @@
         android:layout_marginBottom="72dp"
         android:background="@drawable/custom_login_button"
         android:fontFamily="@font/seguisb"
-        android:text="Register"
+        android:text="@string/register"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         app:backgroundTint="@color/white"
@@ -89,7 +89,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
         android:fontFamily="@font/seguisb"
-        android:text="First of all let's login!"
+        android:text="@string/first_of_all_let_s_login"
         android:textSize="26dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.221"
@@ -102,7 +102,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:fontFamily="@font/seguisb"
-        android:text="Don't you have an Account?\n       Well you can register"
+        android:text="@string/don_t_you_have_an_account_n_well_you_can_register"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/button_register"
         app:layout_constraintEnd_toEndOf="parent"
