--- a/app/src/main/res/layout/premium_fragment.xml
+++ b/app/src/main/res/layout/premium_fragment.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:fontFamily="@font/seguisb"
-        android:text="Explore schedules"
+        android:text="@string/explore_schedules"
         android:textColor="@color/black"
         android:textSize="26dp"
         app:layout_constraintBottom_toTopOf="@+id/gridFilter"
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/seguisb"
-        android:text="Select exercise's type"
+        android:text="@string/select_exercise_s_type"
         android:textSize="12dp"
         app:layout_constraintBottom_toTopOf="@+id/gridFilter"
         app:layout_constraintEnd_toEndOf="parent"
