--- a/app/src/main/res/layout/user_page_layout2.xml
+++ b/app/src/main/res/layout/user_page_layout2.xml
@@ -143,7 +143,7 @@ android:layout_width="match_parent">
                         android:layout_below="@+id/schede_create_numero"
                         android:layout_centerInParent="true"
                         android:fontFamily="@font/seguisb"
-                        android:text="Schedule created"
+                        android:text="@string/schedule_created"
                         android:textSize="14dp" />
                 </RelativeLayout>
 
@@ -190,7 +190,7 @@ android:layout_width="match_parent">
                         android:layout_below="@+id/schede_scaricate_numero"
                         android:layout_centerInParent="true"
                         android:fontFamily="@font/seguisb"
-                        android:text="Downloads"
+                        android:text="@string/downloads"
                         android:textSize="14dp" />
                 </RelativeLayout>
 
@@ -206,7 +206,7 @@ android:layout_width="match_parent">
             android:layout_marginLeft="16dp"
             android:layout_marginTop="18dp"
             android:fontFamily="@font/seguisb"
-            android:text="Name"
+            android:text="@string/name"
             android:textColor="@color/grey"
             android:textSize="26dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -259,7 +259,7 @@ android:layout_width="match_parent">
             android:layout_marginLeft="16dp"
             android:layout_marginTop="18dp"
             android:fontFamily="@font/seguisb"
-            android:text="Email"
+            android:text="@string/email"
             android:textColor="@color/grey"
             android:textSize="26dp"
             app:layout_constraintStart_toStartOf="parent"
