--- a/app/src/main/res/layout/workout_card_layout.xml
+++ b/app/src/main/res/layout/workout_card_layout.xml
@@ -31,7 +31,7 @@
                 android:ellipsize="end"
                 android:fontFamily="@font/seguisb"
                 android:maxLines="1"
-                android:text="Workout Title"
+                android:text="@string/workout_title"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
                 android:ellipsize="end"
                 android:fontFamily="@font/seguisb"
                 android:maxLines="3"
-                android:text="Description"
+                android:text="@string/description"
                 android:textSize="14sp"
                 android:textStyle="italic"
                 app:layout_constraintStart_toStartOf="parent"
