--- a/app/src/main/res/layout/create_exercise_layout.xml
+++ b/app/src/main/res/layout/create_exercise_layout.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:fontFamily="@font/seguisb"
-        android:text="Create a new exercise"
+        android:text="@string/create_a_new_exercise"
         android:textColor="#EFEFEF"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -30,7 +30,7 @@
         android:background="@drawable/searchbar_style"
         android:ems="10"
         android:fontFamily="@font/seguisb"
-        android:hint="Title"
+        android:hint="@string/title"
         android:inputType="textPersonName"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +46,7 @@
         android:layout_marginTop="64dp"
         android:fontFamily="@font/seguisb"
         android:gravity="center"
-        android:text="Category: "
+        android:text="@string/category"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameEditText" />
