--- a/app/src/main/res/layout/create_schedule_layout.xml
+++ b/app/src/main/res/layout/create_schedule_layout.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:fontFamily="@font/seguisb"
-        android:text="Create your schedule!"
+        android:text="@string/create_your_schedule"
         android:textColor="#EFEFEF"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -76,7 +76,7 @@
         android:layout_marginTop="80dp"
         android:fontFamily="@font/seguisb"
         android:gravity="center"
-        android:text='Click the "+" button to add exercises'
+        android:text="@string/click_the_button_to_add_exercises"
         android:textSize="16sp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
