--- a/app/src/main/res/layout/edit_exercise_layout.xml
+++ b/app/src/main/res/layout/edit_exercise_layout.xml
@@ -13,7 +13,7 @@
         android:layout_marginLeft="32dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/seguisb"
-        android:text="Exercise"
+        android:text="@string/exercise"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -42,7 +42,7 @@
         android:layout_marginRight="4dp"
         android:fontFamily="@font/seguisb"
         android:gravity="center"
-        android:text="Rest:"
+        android:text="@string/rest_"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/numberPicker"
         app:layout_constraintTop_toBottomOf="@+id/setsRecyclerView" />
@@ -92,7 +92,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
-        android:text="add set"
+        android:text="@string/add_set"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -112,7 +112,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/seguisb"
-        android:text='Click "add set" start the configuration'
+        android:text="@string/click_add_set_start_the_configuration"
         android:textSize="16sp"
         android:textStyle="normal"
         android:visibility="gone"
