--- a/app/src/main/res/layout/edit_schedule_layout.xml
+++ b/app/src/main/res/layout/edit_schedule_layout.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:fontFamily="@font/seguisb"
-        android:text="Edit your schedule"
+        android:text="@string/edit_your_schedule"
         android:textColor="#EFEFEF"
         android:textSize="24sp"
         android:textStyle="bold"
