--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -31,7 +31,7 @@
                 android:layout_marginLeft="28dp"
                 android:layout_marginTop="28dp"
                 android:fontFamily="@font/seguisb"
-                android:text="My schedules"
+                android:text="@string/my_schedules"
                 android:textColor="@color/white"
                 android:textSize="26dp"
                 app:layout_constraintStart_toStartOf="parent"
