--- a/app/src/main/res/layout/register_layout.xml
+++ b/app/src/main/res/layout/register_layout.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
         android:fontFamily="@font/seguisb"
-        android:text="Okay let's register!"
+        android:text="@string/okay_let_s_register"
         android:textSize="26dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.221"
@@ -96,7 +96,7 @@
         android:drawablePadding="10dp"
         android:ems="10"
         android:fontFamily="@font/seguisb"
-        android:hint="Confirm password"
+        android:hint="@string/confirm_password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
         android:paddingLeft="10dp"
@@ -113,7 +113,7 @@
         android:layout_marginTop="32dp"
         android:background="@drawable/custom_login_button"
         android:fontFamily="@font/seguisb"
-        android:text="Register"
+        android:text="@string/register"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         app:backgroundTint="@color/white"
