--- a/app/src/main/res/layout/set_item.xml
+++ b/app/src/main/res/layout/set_item.xml
@@ -80,7 +80,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/seguisb"
                     android:gravity="center"
-                    android:text="Weight:"
+                    android:text="@string/weight_"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
