--- a/app/src/main/res/layout/set_schedule_data_layout.xml
+++ b/app/src/main/res/layout/set_schedule_data_layout.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:fontFamily="@font/seguisb"
-        android:text="Choose the name of your schedule"
+        android:text="@string/choose_the_name_of_your_schedule"
         android:textColor="#EFEFEF"
         android:textSize="22sp"
         android:textStyle="bold"
@@ -30,7 +30,7 @@
         android:background="@drawable/searchbar_style"
         android:ems="10"
         android:fontFamily="@font/seguisb"
-        android:hint="Title"
+        android:hint="@string/title"
         android:inputType="textPersonName"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +46,7 @@
         android:ems="10"
         android:fontFamily="@font/seguisb"
         android:gravity="start|top"
-        android:hint="Description (optional)"
+        android:hint="@string/description_optional"
         android:inputType="textMultiLine"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
