--- a/app/src/main/res/layout/workout_layout.xml
+++ b/app/src/main/res/layout/workout_layout.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/seguisb"
         android:textColor="#000000"
-        android:text="Workout terminated succesfully"
+        android:text="@string/workout_terminated_succesfully"
         android:textSize="24dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -77,7 +77,7 @@
         android:layout_height="46dp"
         android:background="@drawable/end_workout_button"
         android:fontFamily="@font/seguisb"
-        android:text="Back Home"
+        android:text="@string/back_home"
         android:textAllCaps="false"
         android:textColor="@color/pale_green"
         android:visibility="invisible"
@@ -153,7 +153,7 @@
         android:layout_marginTop="56dp"
         android:fontFamily="@font/seguisb"
         android:gravity="center"
-        android:text="Sets remains: X"
+        android:text="@string/sets_remains_x"
         android:textColor="@color/orange"
         android:textSize="28sp"
         android:textStyle="bold"
@@ -169,7 +169,7 @@
         android:layout_marginTop="56dp"
         android:fontFamily="@font/seguisb"
         android:gravity="center"
-        android:text="Rest"
+        android:text="@string/rest"
         android:textColor="@color/black"
         android:textSize="28sp"
         android:textStyle="bold"
