--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.mytrainingschedules.activities.mainactivity.home.HomeFragment"
+        android:name="com.pomegranatesoftware.mytrainingschedules.activities.mainactivity.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/home_fragment" />
 
     <fragment
         android:id="@+id/navigation_settings"
-        android:name="com.example.mytrainingschedules.activities.mainactivity.search.SearchFragment"
+        android:name="com.pomegranatesoftware.mytrainingschedules.activities.mainactivity.search.SearchFragment"
         android:label="@string/title_settings"
         tools:layout="@layout/settings_fragment" />
 
     <fragment
         android:id="@+id/navigation_premium"
-        android:name="com.example.mytrainingschedules.activities.mainactivity.explore.ExploreFragment"
+        android:name="com.pomegranatesoftware.mytrainingschedules.activities.mainactivity.explore.ExploreFragment"
         android:label="@string/title_premium"
         tools:layout="@layout/premium_fragment" />
 </navigation>
